--- a/Voting_Distortion.ipynb
+++ b/Voting_Distortion.ipynb
@@ -13,29 +13,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from VoteRules import VoteResult\n",
+        "from VoteRules2D import VoteResult2D\n",
         "import pandas as pd\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "def simulate(numTest, n, m, distribution):\n",
+        "def simulate(numTest,n,m,distribution):\n",
         "    dict = {\"n\":[], \"m\":[], \"Distribution\":[], \"OPT\":[], \"Plurality\":[], \"Plurality Distortion\":[],\n",
         "    \"Copeland\":[], \"Copeland Distortion\":[], \"STV\":[], \"STV Distortion\":[],\n",
         "    \"Borda\":[], \"Borda Distortion\":[], \"STAR\":[], \"STAR Distortion\":[]}\n",
         "    for i in range(numTest):\n",
-        "        test = VoteResult(n, m, distribution)\n",
+        "        test = VoteResult2D(n, m, distribution)\n",
         "        dict[\"n\"].append(n)\n",
         "        dict[\"m\"].append(m)\n",
         "        dict[\"Distribution\"].append(test.distribution)\n",
@@ -61,27 +61,33 @@
         "\n",
         "        \n",
         "    df = pd.DataFrame(dict)\n",
-        "    df.to_csv('output.csv', mode=\"a\", header = None)\n",
+        "    df.to_csv('output2D.csv', mode=\"a\",header=None)\n",
         "\n",
         "# Now you have a DataFrame df with the results of your simulations\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
-        "dist = [\"normal\", \"uniform\", \"poisson\",\"bimodal\"]\n",
-        "narray = [10, 15, 20, 25, 50, 100]\n",
-        "marray = [5, 10, 15, 20, 25, 50, 100]\n",
+        "dist = [\"normal\", \"uniform\", \"poisson\"]\n",
+        "narray = [200, 400]\n",
+        "marray = [5, 10, 50, 100]\n",
         "\n",
         "for d in dist:\n",
         "    for n in narray:\n",
         "        for m in marray:\n",
-        "            simulate(1000, n, m, d)"
+        "            simulate(500, n, m, d)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -104,7 +110,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
