add plurality veto

--- a/Voting_Distortion.ipynb
+++ b/Voting_Distortion.ipynb
@@ -13,11 +13,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from VoteRules2D import VoteResult2D\n",
+        "from VoteRules3D import VoteResult3D\n",
         "import pandas as pd\n",
         "\n",
         "\n",
@@ -26,18 +26,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def simulate(numTest,n,m,distribution):\n",
-        "    dict = {\"n\":[], \"m\":[], \"Distribution\":[], \"OPT\":[], \"Plurality\":[], \"Plurality Distortion\":[],\n",
+        "def simulate(numTest,n,m, dimension, distribution):\n",
+        "    dict = {\"n\":[], \"m\":[], \"Dimension\":[], \"Distribution\":[], \"OPT\":[], \"Plurality\":[], \"Plurality Distortion\":[],\n",
         "    \"Copeland\":[], \"Copeland Distortion\":[], \"STV\":[], \"STV Distortion\":[],\n",
-        "    \"Borda\":[], \"Borda Distortion\":[], \"STAR\":[], \"STAR Distortion\":[]}\n",
+        "    \"Borda\":[], \"Borda Distortion\":[], \"STAR\":[], \"STAR Distortion\":[],\n",
+        "    \"Plurality Veto\":[], \"Plurality Veto Distortion\":[]}\n",
+        "    \n",
         "    for i in range(numTest):\n",
-        "        test = VoteResult2D(n, m, distribution)\n",
+        "        test = VoteResult3D(n, m, dimension, distribution)\n",
         "        dict[\"n\"].append(n)\n",
         "        dict[\"m\"].append(m)\n",
+        "        dict[\"Dimension\"].append(dimension)\n",
         "        dict[\"Distribution\"].append(test.distribution)\n",
         "        dict[\"OPT\"].append(test.OPTcandidate)\n",
         "\n",
@@ -47,39 +50,42 @@
         "        stv = test.STV()\n",
         "        borda = test.borda()\n",
         "        star = test.STAR()\n",
+        "        pluralityVeto = test.pluralityVeto()\n",
+        "\n",
         "        dict[\"Plurality\"].append(plurality)\n",
         "        dict[\"Copeland\"].append(copeland)\n",
         "        dict[\"STV\"].append(stv)\n",
         "        dict[\"Borda\"].append(borda)\n",
         "        dict[\"STAR\"].append(star)\n",
+        "        dict[\"Plurality Veto\"].append(pluralityVeto)\n",
         "\n",
         "        dict[\"Plurality Distortion\"].append(test.distortion(plurality))\n",
         "        dict[\"Copeland Distortion\"].append(test.distortion(copeland))\n",
         "        dict[\"STV Distortion\"].append(test.distortion(stv))\n",
         "        dict[\"Borda Distortion\"].append(test.distortion(borda))\n",
         "        dict[\"STAR Distortion\"].append(test.distortion(star))\n",
+        "        dict[\"Plurality Veto Distortion\"].append(test.distortion(pluralityVeto))\n",
         "\n",
         "        \n",
         "    df = pd.DataFrame(dict)\n",
-        "    df.to_csv('output2D.csv', mode=\"a\",header=None)\n",
+        "    df.to_csv('output3D.csv', mode=\"a\",header=None)\n",
         "\n",
         "# Now you have a DataFrame df with the results of your simulations\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
-        "dist = [\"normal\", \"uniform\", \"poisson\"]\n",
-        "narray = [200, 400]\n",
+        "dist = [\"normal\", \"uniform\", \"poisson\", \"bimodal\"]\n",
         "marray = [5, 10, 50, 100]\n",
+        "n=200\n",
         "\n",
         "for d in dist:\n",
-        "    for n in narray:\n",
-        "        for m in marray:\n",
-        "            simulate(500, n, m, d)"
+        "    for m in marray:\n",
+        "        simulate(00, n, m, \"3D\", d)"
       ]
     },
     {
