--- a/Voting_Distortion.ipynb
+++ b/Voting_Distortion.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,9 +75,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\Michelle Le\\OneDrive\\Tài liệu\\SSRI 2023\\Voting_Distortion.ipynb Cell 4\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m dist:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mfor\u001b[39;00m m \u001b[39min\u001b[39;00m marray:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         simulate(\u001b[39m10\u001b[39;49m, n, m, \u001b[39m\"\u001b[39;49m\u001b[39m3D\u001b[39;49m\u001b[39m\"\u001b[39;49m, d)\n",
+            "\u001b[1;32mc:\\Users\\Michelle Le\\OneDrive\\Tài liệu\\SSRI 2023\\Voting_Distortion.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m#winners \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m plurality \u001b[39m=\u001b[39m test\u001b[39m.\u001b[39mplurality()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m copeland \u001b[39m=\u001b[39m test\u001b[39m.\u001b[39;49mcopeland()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m stv \u001b[39m=\u001b[39m test\u001b[39m.\u001b[39mSTV()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Voting_Distortion.ipynb#W3sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m borda \u001b[39m=\u001b[39m test\u001b[39m.\u001b[39mborda()\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\OneDrive\\Tài liệu\\SSRI 2023\\VoteRules3D.py:179\u001b[0m, in \u001b[0;36mVoteResult3D.copeland\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    177\u001b[0m found \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    178\u001b[0m k \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m--> 179\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m found:\n\u001b[0;32m    180\u001b[0m     \u001b[39mif\u001b[39;00m ballot[k] \u001b[39m==\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcandidates[i]:\n\u001b[0;32m    181\u001b[0m         score1 \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "dist = [\"normal\", \"uniform\", \"poisson\", \"bimodal\"]\n",
         "marray = [5, 10, 50, 100]\n",
@@ -85,7 +99,7 @@
         "\n",
         "for d in dist:\n",
         "    for m in marray:\n",
-        "        simulate(00, n, m, \"3D\", d)"
+        "        simulate(500, n, m, \"3D\", d)"
       ]
     },
     {
