--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -26,173 +26,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>index</th>\n",
-              "      <th>n</th>\n",
-              "      <th>m</th>\n",
-              "      <th>Distribution</th>\n",
-              "      <th>OPT</th>\n",
-              "      <th>Plurality</th>\n",
-              "      <th>Plurality Distortion</th>\n",
-              "      <th>Copeland</th>\n",
-              "      <th>Copeland Distortion</th>\n",
-              "      <th>STV</th>\n",
-              "      <th>STV Distortion</th>\n",
-              "      <th>Borda</th>\n",
-              "      <th>Borda Distortion</th>\n",
-              "      <th>STAR</th>\n",
-              "      <th>STAR Distortion</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>normal</td>\n",
-              "      <td>Candidate 3</td>\n",
-              "      <td>Candidate 0</td>\n",
-              "      <td>1.043756</td>\n",
-              "      <td>Candidate 0</td>\n",
-              "      <td>1.043756</td>\n",
-              "      <td>Candidate 0</td>\n",
-              "      <td>1.0437557432099716</td>\n",
-              "      <td>Candidate 3</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>normal</td>\n",
-              "      <td>Candidate 3</td>\n",
-              "      <td>Candidate 2</td>\n",
-              "      <td>1.925195</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.132389</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.1323885206360356</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.132389</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>normal</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>Candidate 0</td>\n",
-              "      <td>1.492109</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>normal</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>Candidate 1</td>\n",
-              "      <td>1.089051</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>10</td>\n",
-              "      <td>5</td>\n",
-              "      <td>normal</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>Candidate 4</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   index   n  m Distribution          OPT    Plurality  Plurality Distortion  \\\n",
-              "0      0  10  5       normal  Candidate 3  Candidate 0              1.043756   \n",
-              "1      1  10  5       normal  Candidate 3  Candidate 2              1.925195   \n",
-              "2      2  10  5       normal  Candidate 1  Candidate 1              1.000000   \n",
-              "3      3  10  5       normal  Candidate 4  Candidate 1              1.089051   \n",
-              "4      4  10  5       normal  Candidate 4  Candidate 4              1.000000   \n",
-              "\n",
-              "      Copeland  Copeland Distortion          STV      STV Distortion  \\\n",
-              "0  Candidate 0             1.043756  Candidate 0  1.0437557432099716   \n",
-              "1  Candidate 1             1.132389  Candidate 1  1.1323885206360356   \n",
-              "2  Candidate 1             1.000000  Candidate 1                 1.0   \n",
-              "3  Candidate 4             1.000000  Candidate 4                 1.0   \n",
-              "4  Candidate 4             1.000000  Candidate 4                 1.0   \n",
-              "\n",
-              "         Borda  Borda Distortion         STAR STAR Distortion  \n",
-              "0  Candidate 3          1.000000        False           False  \n",
-              "1  Candidate 1          1.132389        False           False  \n",
-              "2  Candidate 0          1.492109  Candidate 1             1.0  \n",
-              "3  Candidate 4          1.000000  Candidate 4             1.0  \n",
-              "4  Candidate 4          1.000000  Candidate 4             1.0  "
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'output.csv'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\Michelle Le\\OneDrive\\Tài liệu\\SSRI 2023\\Visualization.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Visualization.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#read the output file\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Visualization.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(\u001b[39m\"\u001b[39;49m\u001b[39moutput.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michelle%20Le/OneDrive/Ta%CC%80i%20li%C3%AA%CC%A3u/SSRI%202023/Visualization.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    944\u001b[0m     dtype_backend\u001b[39m=\u001b[39mdtype_backend,\n\u001b[0;32m    945\u001b[0m )\n\u001b[0;32m    946\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 948\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:611\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    608\u001b[0m _validate_names(kwds\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnames\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    610\u001b[0m \u001b[39m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 611\u001b[0m parser \u001b[39m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    613\u001b[0m \u001b[39mif\u001b[39;00m chunksize \u001b[39mor\u001b[39;00m iterator:\n\u001b[0;32m    614\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1448\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1445\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m kwds[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m   1447\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles: IOHandles \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m-> 1448\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_engine(f, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1705\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1703\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m mode:\n\u001b[0;32m   1704\u001b[0m         mode \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1705\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39m=\u001b[39m get_handle(\n\u001b[0;32m   1706\u001b[0m     f,\n\u001b[0;32m   1707\u001b[0m     mode,\n\u001b[0;32m   1708\u001b[0m     encoding\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1709\u001b[0m     compression\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mcompression\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1710\u001b[0m     memory_map\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mmemory_map\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mFalse\u001b[39;49;00m),\n\u001b[0;32m   1711\u001b[0m     is_text\u001b[39m=\u001b[39;49mis_text,\n\u001b[0;32m   1712\u001b[0m     errors\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding_errors\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mstrict\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1713\u001b[0m     storage_options\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mstorage_options\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1714\u001b[0m )\n\u001b[0;32m   1715\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1716\u001b[0m f \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles\u001b[39m.\u001b[39mhandle\n",
+            "File \u001b[1;32mc:\\Users\\Michelle Le\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\common.py:863\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    858\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(handle, \u001b[39mstr\u001b[39m):\n\u001b[0;32m    859\u001b[0m     \u001b[39m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    860\u001b[0m     \u001b[39m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    861\u001b[0m     \u001b[39mif\u001b[39;00m ioargs\u001b[39m.\u001b[39mencoding \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m ioargs\u001b[39m.\u001b[39mmode:\n\u001b[0;32m    862\u001b[0m         \u001b[39m# Encoding\u001b[39;00m\n\u001b[1;32m--> 863\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\n\u001b[0;32m    864\u001b[0m             handle,\n\u001b[0;32m    865\u001b[0m             ioargs\u001b[39m.\u001b[39;49mmode,\n\u001b[0;32m    866\u001b[0m             encoding\u001b[39m=\u001b[39;49mioargs\u001b[39m.\u001b[39;49mencoding,\n\u001b[0;32m    867\u001b[0m             errors\u001b[39m=\u001b[39;49merrors,\n\u001b[0;32m    868\u001b[0m             newline\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    869\u001b[0m         )\n\u001b[0;32m    870\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    871\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[0;32m    872\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(handle, ioargs\u001b[39m.\u001b[39mmode)\n",
+            "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output.csv'"
+          ]
         }
       ],
       "source": [
         "#read the output file\n",
-        "df = pd.read_csv(\"output.csv\")\n",
+        "df = pd.read_csv(\"output1D.csv\")\n",
         "df.head()\n",
         "\n"
       ]
@@ -1750,7 +1606,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
