--- a/Visualization2D.ipynb
+++ b/Visualization2D.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -299,7 +299,7 @@
               "4              1.0    Candidate 3                        1.0  "
             ]
           },
-          "execution_count": 61,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -765,7 +765,7 @@
               "                 100                      1.091022  "
             ]
           },
-          "execution_count": 63,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -776,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -785,7 +785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -940,7 +940,7 @@
               "uniform                           1.008379                      1.111301  "
             ]
           },
-          "execution_count": 65,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -951,7 +951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1005,16 +1005,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x2dc07d314f0>"
+              "<matplotlib.legend.Legend at 0x216572cb2c0>"
             ]
           },
-          "execution_count": 83,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1066,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -1221,7 +1221,7 @@
               "100                      1.129675  "
             ]
           },
-          "execution_count": 69,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1233,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1399,7 +1399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1420,7 +1420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1512,7 +1512,7 @@
               "3            78.65             79.95                     62.65  "
             ]
           },
-          "execution_count": 73,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1523,16 +1523,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x2dc07abf1d0>"
+              "<matplotlib.legend.Legend at 0x21659374380>"
             ]
           },
-          "execution_count": 74,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         },
